--- a/src/AdminApp/Views/LoginView.xaml
+++ b/src/AdminApp/Views/LoginView.xaml
@@ -20,8 +20,8 @@
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Label Content="Login" Grid.Row="0" />
-        <TextBox x:Name="tbUsername" Grid.Row="1" />
-        <TextBox x:Name="tbPassword" Grid.Row="2" />
+        <TextBox x:Name="tbUsername" Grid.Row="1" Text="{Binding Username}" />
+        <PasswordBox x:Name="pwPassword" Grid.Row="2" PasswordChanged="PwPassword_PasswordChanged" />
         <Button Grid.Row="3" Content="OK" x:Name="btnLogin" />
         <Label Grid.Row="4" x:Name="lbHint" Content="{Binding Hint}" />
     </Grid>
