--- a/src/AdminApp/Views/LoginView.xaml
+++ b/src/AdminApp/Views/LoginView.xaml
@@ -22,7 +22,7 @@
         <Label Content="Login" Grid.Row="0" />
         <TextBox x:Name="tbUsername" Grid.Row="1" Text="{Binding Username}" />
         <PasswordBox x:Name="pwPassword" Grid.Row="2" PasswordChanged="PwPassword_PasswordChanged" />
-        <Button Grid.Row="3" Content="OK" x:Name="btnLogin" />
+        <Button Grid.Row="3" Content="OK" x:Name="btnLogin" Command="{Binding OkCommand}" />
         <Label Grid.Row="4" x:Name="lbHint" Content="{Binding Hint}" />
     </Grid>
 </Page>
