--- a/src/AdminApp/Views/LoginView.xaml
+++ b/src/AdminApp/Views/LoginView.xaml
@@ -4,25 +4,52 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:ViewModels ="clr-namespace:AdminApp.ViewModels"
+      xmlns:AttachedProperties ="clr-namespace:AdminApp.AttachedProperties"
       xmlns:local="clr-namespace:AdminApp.Views"
       mc:Ignorable="d" 
-      d:DesignHeight="450" d:DesignWidth="800"
+      d:DesignHeight="600" d:DesignWidth="800"
       Title="LoginView">
     <Page.DataContext>
         <ViewModels:LoginViewModel />
     </Page.DataContext>
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="*"/>
+            <ColumnDefinition Width="300px"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
-            <RowDefinition Height="*"/>
+            <RowDefinition Height="300px"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Label Content="Login" Grid.Row="0" />
-        <TextBox x:Name="tbUsername" Grid.Row="1" Text="{Binding Username}" />
-        <PasswordBox x:Name="pwPassword" Grid.Row="2" PasswordChanged="PwPassword_PasswordChanged" />
-        <Button Grid.Row="3" Content="OK" x:Name="btnLogin" Command="{Binding OkCommand}" />
-        <Label Grid.Row="4" x:Name="lbHint" Content="{Binding Hint}" />
+        <Border Grid.RowSpan="3" Grid.ColumnSpan="3" Background="Black" />
+        <Grid Grid.Column="1" Grid.Row="1">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="*"/>
+                <RowDefinition Height="50px"/>
+                <RowDefinition Height="50px"/>
+                <RowDefinition Height="50px"/>
+                <RowDefinition Height="60px"/>
+            </Grid.RowDefinitions>
+            <Border Grid.RowSpan="5" Background="White" />
+            <Label Content="LOGIN" Grid.Row="0" Margin="50,5,50,5" />
+            <AdornerDecorator Grid.Row="1" Margin="50,10,50,10" >
+                <TextBox x:Name="tbUsername" Text="{Binding Username}" Grid.Row="1">
+                    <AttachedProperties:PlaceholderService.Placeholder>
+                        <TextBlock>Username</TextBlock>
+                    </AttachedProperties:PlaceholderService.Placeholder>
+                </TextBox>
+            </AdornerDecorator>
+            <AdornerDecorator Grid.Row="2" Margin="50,10,50,10" >
+                <PasswordBox x:Name="pwPassword" Grid.Row="2" PasswordChanged="PwPassword_PasswordChanged">
+                    <AttachedProperties:PlaceholderService.Placeholder>
+                        <TextBlock>Password</TextBlock>
+                    </AttachedProperties:PlaceholderService.Placeholder>
+                </PasswordBox>
+            </AdornerDecorator>
+            <Button Margin="50,5,50,5" Grid.Row="3" Content="OK" x:Name="btnLogin" Command="{Binding OkCommand}" />
+            <TextBlock Margin="50,5,50,5" Grid.Row="4" x:Name="lbHint" Text="{Binding Hint}" TextWrapping="Wrap" Foreground="Gray" />
+        </Grid>
     </Grid>
 </Page>
