--- a/src/AdminApp/Views/MainWindow.xaml
+++ b/src/AdminApp/Views/MainWindow.xaml
@@ -4,9 +4,18 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AdminApp"
+        xmlns:ViewModelLocator="clr-namespace:NET.efilnukefesin.Implementations.Mvvm;assembly=NET.efilnukefesin.Implementations.Mvvm"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="800">
+    <Window.Resources>
+        <ResourceDictionary>
+            <ObjectDataProvider x:Key="Locator" ObjectInstance="{x:Static ViewModelLocator:StaticViewModelLocator.Current}" />
+        </ResourceDictionary>
+    </Window.Resources>
+    <Window.DataContext>
+        <Binding Mode="OneWay" Source="{StaticResource Locator}" Path="[MainViewModel]" />
+    </Window.DataContext>
     <Grid>
-        <Frame x:Name="MainFrame" Source="/AdminApp;component/Views/LoginView.xaml" />
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" />
     </Grid>
 </Window>
