--- a/src/AdminApp/Views/LoginView.xaml
+++ b/src/AdminApp/Views/LoginView.xaml
@@ -52,7 +52,7 @@
                     </AttachedProperties:PlaceholderService.Placeholder>
                 </PasswordBox>
             </AdornerDecorator>
-            <Button Margin="50,5,50,5" Grid.Row="3" Content="OK" x:Name="btnLogin" Command="{Binding OkCommand}" />
+            <Button Margin="50,5,50,5" Grid.Row="3" Content="OK" x:Name="btnLogin" Command="{Binding OkCommand}" IsDefault="True"/>
             <ProgressBar Margin="5,5,5,5" Grid.Row="4" Visibility="{Binding IsProgressbarVisible, Converter={StaticResource BoolToVisibleOrCollapsed}}" IsIndeterminate="True" />
             <TextBlock Margin="50,5,50,5" Grid.Row="5" x:Name="lbHint" Text="{Binding Hint}" TextWrapping="Wrap" Foreground="Gray" />
         </Grid>
