--- a/src/AdminApp/Views/LoginView.xaml
+++ b/src/AdminApp/Views/LoginView.xaml
@@ -39,21 +39,21 @@
             <Border Grid.RowSpan="6" Background="White" />
             <Label Content="LOGIN" Grid.Row="0" Margin="50,5,50,5" />
             <AdornerDecorator Grid.Row="1" Margin="50,10,50,10" >
-                <TextBox x:Name="tbUsername" Text="{Binding Username}" Grid.Row="1" IsEnabled="{Binding IsIdle}">
+                <TextBox x:Name="tbUsername" Text="{Binding Username}" Grid.Row="1" IsEnabled="{Binding IsIdle, IsAsync= true}">
                     <AttachedProperties:PlaceholderService.Placeholder>
                         <TextBlock>Username</TextBlock>
                     </AttachedProperties:PlaceholderService.Placeholder>
                 </TextBox>
             </AdornerDecorator>
             <AdornerDecorator Grid.Row="2" Margin="50,10,50,10" >
-                <PasswordBox x:Name="pwPassword" Grid.Row="2" PasswordChanged="PwPassword_PasswordChanged" IsEnabled="{Binding IsIdle}">
+                <PasswordBox x:Name="pwPassword" Grid.Row="2" PasswordChanged="PwPassword_PasswordChanged" IsEnabled="{Binding IsIdle, IsAsync= true}">
                     <AttachedProperties:PlaceholderService.Placeholder>
                         <TextBlock>Password</TextBlock>
                     </AttachedProperties:PlaceholderService.Placeholder>
                 </PasswordBox>
             </AdornerDecorator>
-            <Button Margin="50,5,50,5" Grid.Row="3" Content="OK" x:Name="btnLogin" Command="{Binding OkCommand}" IsDefault="True" IsEnabled="{Binding IsIdle}"/>
-            <ProgressBar Margin="5,5,5,5" Grid.Row="4" Visibility="{Binding IsProgressbarVisible, Converter={StaticResource BoolToVisibleOrCollapsed}}" IsIndeterminate="True" />
+            <Button Margin="50,5,50,5" Grid.Row="3" Content="OK" x:Name="btnLogin" Command="{Binding OkCommand}" IsDefault="True" IsEnabled="{Binding IsIdle, IsAsync= true}"/>
+            <ProgressBar Margin="5,5,5,5" Grid.Row="4" Visibility="{Binding IsProgressbarVisible, IsAsync= true, Converter={StaticResource BoolToVisibleOrCollapsed}}" IsIndeterminate="True" />
             <TextBlock Margin="50,5,50,5" Grid.Row="5" x:Name="lbHint" Text="{Binding Hint}" TextWrapping="Wrap" Foreground="Gray" />
         </Grid>
     </Grid>
