--- a/src/AdminApp/Views/MainWindow.xaml
+++ b/src/AdminApp/Views/MainWindow.xaml
@@ -5,17 +5,30 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:AdminApp"
         xmlns:ViewModelLocator="clr-namespace:NET.efilnukefesin.Implementations.Mvvm;assembly=NET.efilnukefesin.Implementations.Mvvm"
+        xmlns:Converters ="clr-namespace:AdminApp.Converters"
         mc:Ignorable="d"
         Title="MainWindow" Height="600" Width="800">
     <Window.Resources>
         <ResourceDictionary>
             <ObjectDataProvider x:Key="Locator" ObjectInstance="{x:Static ViewModelLocator:StaticViewModelLocator.Current}" />
+            <Converters:BoolToVisibleOrCollapsed x:Key="BoolToVisibleOrCollapsed"/>
         </ResourceDictionary>
     </Window.Resources>
     <Window.DataContext>
         <Binding Mode="OneWay" Source="{StaticResource Locator}" Path="[MainViewModel]" />
     </Window.DataContext>
     <Grid>
-        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" />
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
+        </Grid.ColumnDefinitions>
+        <StackPanel Grid.Column="0" Width="250px" HorizontalAlignment="Left" Visibility="{Binding IsMenubarVisible, Converter={StaticResource BoolToVisibleOrCollapsed}}" Grid.ColumnSpan="2">
+            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Item #1" GroupName="MainMenuGroup" />
+            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Item #2" GroupName="MainMenuGroup" />
+            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Item #3" GroupName="MainMenuGroup" />
+            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Item #4" GroupName="MainMenuGroup" />
+        </StackPanel>
+        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" Grid.Column="1"/>
     </Grid>
+
 </Window>
