--- a/src/AdminApp/Views/MainWindow.xaml
+++ b/src/AdminApp/Views/MainWindow.xaml
@@ -18,8 +18,8 @@
         <Binding Mode="OneWay" Source="{StaticResource Locator}" Path="[MainViewModel]" />
     </Window.DataContext>
     <DockPanel>
-        <StackPanel Grid.Column="0" Width="250px" HorizontalAlignment="Left" Visibility="{Binding IsMenubarVisible, Converter={StaticResource BoolToVisibleOrCollapsed}}">
-            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Item #1" GroupName="MainMenuGroup" />
+        <StackPanel Grid.Column="0" Width="100px" HorizontalAlignment="Left" Visibility="{Binding IsMenubarVisible, Converter={StaticResource BoolToVisibleOrCollapsed}}">
+            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="User Info" GroupName="MainMenuGroup" IsChecked="True" Command="{Binding UserInfoCommand}" />
             <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Item #2" GroupName="MainMenuGroup" />
             <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Item #3" GroupName="MainMenuGroup" />
             <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Item #4" GroupName="MainMenuGroup" />
