--- a/src/AdminApp/Views/MainWindow.xaml
+++ b/src/AdminApp/Views/MainWindow.xaml
@@ -19,10 +19,10 @@
     </Window.DataContext>
     <DockPanel>
         <StackPanel Grid.Column="0" Width="100px" HorizontalAlignment="Left" Visibility="{Binding IsMenubarVisible, Converter={StaticResource BoolToVisibleOrCollapsed}}">
-            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="User Info" GroupName="MainMenuGroup" IsChecked="True" Command="{Binding UserInfoCommand}" />
-            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Item #2" GroupName="MainMenuGroup" />
-            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Item #3" GroupName="MainMenuGroup" />
-            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Item #4" GroupName="MainMenuGroup" />
+            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="User Info" GroupName="MainMenuGroup" IsChecked="True" Command="{Binding UserInfoCommand}" HorizontalContentAlignment="Left" />
+            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Users" GroupName="MainMenuGroup" Command="{Binding ViewUsersCommand}" HorizontalContentAlignment="Left"/>
+            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Roles" GroupName="MainMenuGroup" Command="{Binding ViewRolesCommand}" HorizontalContentAlignment="Left"/>
+            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Permissions" GroupName="MainMenuGroup" Command="{Binding ViewPermissionsCommand}" HorizontalContentAlignment="Left"/>
         </StackPanel>
         <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" HorizontalAlignment="Stretch"/>
     </DockPanel>
