--- a/src/AdminApp/Views/ViewPermissionsView.xaml
+++ b/src/AdminApp/Views/ViewPermissionsView.xaml
@@ -4,11 +4,19 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AdminApp.Views"
+      xmlns:UserControls="clr-namespace:AdminApp.UserControls"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ViewPermissionsView">
-
     <Grid>
-        <Label>VIEW PERMISSIONS</Label>
+        <StackPanel Orientation="Vertical">
+            <Label>VIEW PERMISSIONS</Label>
+            <Label>Permissions</Label>
+            <ListView>
+
+            </ListView>
+            <Label>Add Permission</Label>
+            <UserControls:AddPermissionUserControl></UserControls:AddPermissionUserControl>
+        </StackPanel>
     </Grid>
 </Page>
