--- a/src/AdminApp/Views/ViewPermissionsView.xaml
+++ b/src/AdminApp/Views/ViewPermissionsView.xaml
@@ -3,20 +3,46 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+      xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
       xmlns:local="clr-namespace:AdminApp.Views"
-      xmlns:UserControls="clr-namespace:AdminApp.UserControls"
+      xmlns:AttachedProperties ="clr-namespace:AdminApp.AttachedProperties"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ViewPermissionsView">
+    <i:Interaction.Triggers>
+        <i:EventTrigger EventName="Loaded">
+            <i:InvokeCommandAction Command="{Binding LoadedCommand}" />
+        </i:EventTrigger>
+    </i:Interaction.Triggers>
     <Grid>
         <StackPanel Orientation="Vertical">
             <Label>VIEW PERMISSIONS</Label>
             <Label>Permissions</Label>
-            <ListView>
-
+            <ListView ItemsSource="{Binding Permissions}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <WrapPanel>
+                            <TextBlock Text="Permission: " />
+                            <TextBlock Text="{Binding Name}" FontWeight="Bold" />
+                        </WrapPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
             <Label>Add Permission</Label>
-            <UserControls:AddPermissionUserControl></UserControls:AddPermissionUserControl>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="50px" />
+                </Grid.ColumnDefinitions>
+                <AdornerDecorator Grid.Column="0">
+                    <TextBox x:Name="tbName" Text="{Binding Name}">
+                        <AttachedProperties:PlaceholderService.Placeholder>
+                            <TextBlock>Name</TextBlock>
+                        </AttachedProperties:PlaceholderService.Placeholder>
+                    </TextBox>
+                </AdornerDecorator>
+                <Button Grid.Column="1" IsEnabled="{Binding IsIdle, IsAsync=True}">Add</Button>
+            </Grid>
         </StackPanel>
     </Grid>
 </Page>
