--- a/src/AdminApp/Views/MainWindow.xaml
+++ b/src/AdminApp/Views/MainWindow.xaml
@@ -17,14 +17,20 @@
     <Window.DataContext>
         <Binding Mode="OneWay" Source="{StaticResource Locator}" Path="[MainViewModel]" />
     </Window.DataContext>
-    <DockPanel>
-        <StackPanel Grid.Column="0" Width="100px" HorizontalAlignment="Left" Visibility="{Binding IsMenubarVisible, Converter={StaticResource BoolToVisibleOrCollapsed}}">
-            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="User Info" GroupName="MainMenuGroup" IsChecked="True" Command="{Binding UserInfoCommand}" HorizontalContentAlignment="Left" />
-            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Users" GroupName="MainMenuGroup" Command="{Binding ViewUsersCommand}" HorizontalContentAlignment="Left"/>
-            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Roles" GroupName="MainMenuGroup" Command="{Binding ViewRolesCommand}" HorizontalContentAlignment="Left"/>
-            <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Permissions" GroupName="MainMenuGroup" Command="{Binding ViewPermissionsCommand}" HorizontalContentAlignment="Left"/>
-        </StackPanel>
-        <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" HorizontalAlignment="Stretch"/>
-    </DockPanel>
-
+    <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="25px" />
+        </Grid.RowDefinitions>
+        <DockPanel Grid.Row="0">
+            <StackPanel Grid.Column="0" Width="100px" HorizontalAlignment="Left" Visibility="{Binding IsMenubarVisible, Converter={StaticResource BoolToVisibleOrCollapsed}}">
+                <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="User Info" GroupName="MainMenuGroup" IsChecked="True" Command="{Binding UserInfoCommand}" HorizontalContentAlignment="Left" />
+                <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Users" GroupName="MainMenuGroup" Command="{Binding ViewUsersCommand}" HorizontalContentAlignment="Left"/>
+                <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Roles" GroupName="MainMenuGroup" Command="{Binding ViewRolesCommand}" HorizontalContentAlignment="Left"/>
+                <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Permissions" GroupName="MainMenuGroup" Command="{Binding ViewPermissionsCommand}" HorizontalContentAlignment="Left"/>
+            </StackPanel>
+            <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" HorizontalAlignment="Stretch"/>
+        </DockPanel>
+        <Label Grid.Row="1" Content="{Binding LastMessage}" />
+    </Grid>
 </Window>
