--- a/src/AdminApp/Views/ViewRolesView.xaml
+++ b/src/AdminApp/Views/ViewRolesView.xaml
@@ -7,8 +7,15 @@
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ViewRolesView">
-
     <Grid>
-        <Label>VIEW ROLES</Label>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30px"/>
+            <RowDefinition Height="25px"/>
+            <RowDefinition Height="2*"/>
+            <RowDefinition Height="25px"/>
+            <RowDefinition Height="25px"/>
+        </Grid.RowDefinitions>
+        <Label Grid.Row="0">VIEW ROLES</Label>
+        <Label Grid.Row="1">Roles</Label>
     </Grid>
 </Page>
