--- a/src/AdminApp/Views/MainWindow.xaml
+++ b/src/AdminApp/Views/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:ViewModelLocator="clr-namespace:NET.efilnukefesin.Implementations.Mvvm;assembly=NET.efilnukefesin.Implementations.Mvvm"
         xmlns:Converters ="clr-namespace:AdminApp.Converters"
         mc:Ignorable="d"
-        Title="MainWindow" Height="600" Width="800">
+        Title="{Binding WindowTitle}" Height="600" Width="800">
     <Window.Resources>
         <ResourceDictionary>
             <ObjectDataProvider x:Key="Locator" ObjectInstance="{x:Static ViewModelLocator:StaticViewModelLocator.Current}" />
