--- a/src/ClientApp/Views/LoginView.xaml
+++ b/src/ClientApp/Views/LoginView.xaml
@@ -1,12 +1,12 @@
-﻿<Page x:Class="AdminApp.Views.LoginView"
+﻿<Page x:Class="ClientApp.Views.LoginView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:ViewModels ="clr-namespace:AdminApp.ViewModels"
+      xmlns:ViewModels ="clr-namespace:ClientApp.ViewModels"
       xmlns:AttachedProperties ="clr-namespace:WPF.Shared.AttachedProperties;assembly=WPF.Shared"
       xmlns:Converters ="clr-namespace:WPF.Shared.Converters;assembly=WPF.Shared"
-      xmlns:local="clr-namespace:AdminApp.Views"
+      xmlns:local="clr-namespace:ClientApp.Views"
       mc:Ignorable="d" 
       d:DesignHeight="600" d:DesignWidth="800"
       Title="LoginView">
