--- a/src/ClientApp/Views/MainWindow.xaml
+++ b/src/ClientApp/Views/MainWindow.xaml
@@ -24,10 +24,7 @@
         </Grid.RowDefinitions>
         <DockPanel Grid.Row="0">
             <StackPanel Grid.Column="0" Width="100px" HorizontalAlignment="Left" Visibility="{Binding IsMenubarVisible, Converter={StaticResource BoolToVisibleOrCollapsed}}">
-                <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="User Info" GroupName="MainMenuGroup" IsChecked="True" Command="{Binding UserInfoCommand}" HorizontalContentAlignment="Left" />
-                <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Users" GroupName="MainMenuGroup" Command="{Binding ViewUsersCommand}" HorizontalContentAlignment="Left"/>
-                <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Roles" GroupName="MainMenuGroup" Command="{Binding ViewRolesCommand}" HorizontalContentAlignment="Left"/>
-                <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="View Permissions" GroupName="MainMenuGroup" Command="{Binding ViewPermissionsCommand}" HorizontalContentAlignment="Left"/>
+                <RadioButton Style="{StaticResource {x:Type ToggleButton}}" Content="Use SuperHotFeature01" GroupName="MainMenuGroup" IsChecked="True" Command="{Binding SuperHotFeature01Command}" HorizontalContentAlignment="Left" />
             </StackPanel>
             <Frame x:Name="MainFrame" NavigationUIVisibility="Hidden" HorizontalAlignment="Stretch"/>
         </DockPanel>
