fixed Roles and therefore Bug#4

--- a/src/AdminApp/Views/ViewRolesView.xaml
+++ b/src/AdminApp/Views/ViewRolesView.xaml
@@ -23,5 +23,29 @@
         </Grid.RowDefinitions>
         <Label Grid.Row="0">VIEW ROLES</Label>
         <Label Grid.Row="1">Roles</Label>
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="2*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
+            <ListView ItemsSource="{Binding Roles}" Grid.Column="0" SelectedItem="{Binding SelectedRole}">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <WrapPanel>
+                            <TextBlock Text="{Binding Name}" FontWeight="Bold" />
+                        </WrapPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+            <ListView ItemsSource="{Binding SelectedRole.Permissions}" Grid.Column="1">
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <WrapPanel>
+                            <TextBlock Text="{Binding Name}" />
+                        </WrapPanel>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+        </Grid>
     </Grid>
 </Page>
