--- a/src/AdminApp/UserControls/UserDetailsControl.xaml
+++ b/src/AdminApp/UserControls/UserDetailsControl.xaml
@@ -14,6 +14,7 @@
             <Label Content="{Binding Item.Name}" />
             <Label Content="{Binding Item2}" />
             <Label Content="{Binding Item2.Name}" />
+            <Label Content="{Binding UserName}" />
         </StackPanel>
         
     </Grid>
