--- a/src/AdminApp/Views/UserInfoView.xaml
+++ b/src/AdminApp/Views/UserInfoView.xaml
@@ -4,6 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:AdminApp.Views"
+      xmlns:Converters ="clr-namespace:WPF.Shared.Converters;assembly=WPF.Shared"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="UserInfoView">
