--- a/src/AdminApp/Views/ViewPermissionsView.xaml
+++ b/src/AdminApp/Views/ViewPermissionsView.xaml
@@ -6,6 +6,7 @@
       xmlns:i="clr-namespace:System.Windows.Interactivity;assembly=System.Windows.Interactivity"
       xmlns:local="clr-namespace:AdminApp.Views"
       xmlns:AttachedProperties ="clr-namespace:WPF.Shared.AttachedProperties;assembly=WPF.Shared"
+      xmlns:Converters ="clr-namespace:WPF.Shared.Converters;assembly=WPF.Shared"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
       Title="ViewPermissionsView">
