--- a/src/AdminApp/UserControls/UserDetailsControl.xaml
+++ b/src/AdminApp/UserControls/UserDetailsControl.xaml
@@ -5,8 +5,14 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:AdminApp.UserControls"
              xmlns:Base="clr-namespace:WPF.Shared.UserControls;assembly=WPF.Shared"
+             xmlns:Converters ="clr-namespace:WPF.Shared.Converters;assembly=WPF.Shared"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+    <Base:BaseUserControl.Resources>
+        <ResourceDictionary>
+            <Converters:BoolToVisibleOrCollapsed x:Key="BoolToVisibleOrCollapsed"/>
+        </ResourceDictionary>
+    </Base:BaseUserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="100px" />
@@ -26,18 +32,26 @@
                 <RowDefinition Height="*" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
-            <DockPanel Grid.Column="0" Grid.Row="0" Margin="2px">
-                <Label Content="Logins" DockPanel.Dock="Top"/>
-                <ListView ItemsSource="{Binding Item.Logins, RelativeSource={RelativeSource AncestorType=UserControl}}" DockPanel.Dock="Bottom">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <WrapPanel>
-                                <TextBlock Text="{Binding SubjectId}" FontWeight="Bold" />
-                            </WrapPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </DockPanel>
+            <Grid Grid.Column="0" Grid.Row="0" Margin="2px">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <DockPanel Grid.Row="0">
+                    <Label Content="Logins" DockPanel.Dock="Top"/>
+                    <ListView ItemsSource="{Binding Item.Logins, RelativeSource={RelativeSource AncestorType=UserControl}}" DockPanel.Dock="Bottom">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <WrapPanel>
+                                    <TextBlock Text="{Binding SubjectId}" FontWeight="Bold" />
+                                </WrapPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </DockPanel>
+                <Button Grid.Row="1" Height="25px" Content="Add..." Visibility="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource BoolToVisibleOrCollapsed}}"/>
+            </Grid>
+            
             <DockPanel Grid.Column="1" Grid.Row="0" Margin="2px">
                 <Label Content="Values" DockPanel.Dock="Top"/>
                 <ListView ItemsSource="{Binding Item.Values, RelativeSource={RelativeSource AncestorType=UserControl}}" DockPanel.Dock="Bottom">
