--- a/src/AdminApp/UserControls/UserDetailsControl.xaml
+++ b/src/AdminApp/UserControls/UserDetailsControl.xaml
@@ -51,45 +51,65 @@
                 </DockPanel>
                 <Button Grid.Row="1" Height="25px" Content="Add..." Visibility="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource BoolToVisibleOrCollapsed}}"/>
             </Grid>
-            
-            <DockPanel Grid.Column="1" Grid.Row="0" Margin="2px">
-                <Label Content="Values" DockPanel.Dock="Top"/>
-                <ListView ItemsSource="{Binding Item.Values, RelativeSource={RelativeSource AncestorType=UserControl}}" DockPanel.Dock="Bottom">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <WrapPanel>
-                                <TextBlock Text="{Binding Name}" FontWeight="Bold" />
-                                <TextBlock Text=" - " />
-                                <TextBlock Text="{Binding Data}" FontWeight="SemiBold" />
-                            </WrapPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </DockPanel>
-            <DockPanel Grid.Column="0" Grid.Row="1" Margin="2,2,2,0">
-                <Label Content="Roles" DockPanel.Dock="Top"/>
-                <ListView ItemsSource="{Binding Item.Roles, RelativeSource={RelativeSource AncestorType=UserControl}}" DockPanel.Dock="Bottom">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <WrapPanel>
-                                <TextBlock Text="{Binding Name}" />
-                            </WrapPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </DockPanel>
-            <DockPanel Grid.Column="1" Grid.Row="1" Margin="2,2,2,0">
-                <Label Content="Owned Roles" DockPanel.Dock="Top"/>
-                <ListView ItemsSource="{Binding Item.OwnedRoles, RelativeSource={RelativeSource AncestorType=UserControl}}" DockPanel.Dock="Bottom">
-                    <ListView.ItemTemplate>
-                        <DataTemplate>
-                            <WrapPanel>
-                                <TextBlock Text="{Binding Name}" />
-                            </WrapPanel>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </DockPanel>
+            <Grid Grid.Column="1" Grid.Row="0" Margin="2px">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <DockPanel Grid.Row="0">
+                    <Label Content="Values" DockPanel.Dock="Top"/>
+                    <ListView ItemsSource="{Binding Item.Values, RelativeSource={RelativeSource AncestorType=UserControl}}" DockPanel.Dock="Bottom">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <WrapPanel>
+                                    <TextBlock Text="{Binding Name}" FontWeight="Bold" />
+                                    <TextBlock Text=" - " />
+                                    <TextBlock Text="{Binding Data}" FontWeight="SemiBold" />
+                                </WrapPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </DockPanel>
+                <Button Grid.Row="1" Height="25px" Content="Add..." Visibility="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource BoolToVisibleOrCollapsed}}"/>
+            </Grid>
+            <Grid Grid.Column="0" Grid.Row="1" Margin="2,2,2,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <DockPanel Grid.Row="0">
+                    <Label Content="Roles" DockPanel.Dock="Top"/>
+                    <ListView ItemsSource="{Binding Item.Roles, RelativeSource={RelativeSource AncestorType=UserControl}}" DockPanel.Dock="Bottom">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <WrapPanel>
+                                    <TextBlock Text="{Binding Name}" />
+                                </WrapPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </DockPanel>
+                <Button Grid.Row="1" Height="25px" Content="Add..." Visibility="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource BoolToVisibleOrCollapsed}}"/>
+            </Grid>
+            <Grid Grid.Column="1" Grid.Row="1" Margin="2,2,2,0">
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
+                </Grid.RowDefinitions>
+                <DockPanel Grid.Row="0">
+                    <Label Content="Owned Roles" DockPanel.Dock="Top"/>
+                    <ListView ItemsSource="{Binding Item.OwnedRoles, RelativeSource={RelativeSource AncestorType=UserControl}}" DockPanel.Dock="Bottom">
+                        <ListView.ItemTemplate>
+                            <DataTemplate>
+                                <WrapPanel>
+                                    <TextBlock Text="{Binding Name}" />
+                                </WrapPanel>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
+                </DockPanel>
+                <Button Grid.Row="1" Height="25px" Content="Add..." Visibility="{Binding MayEdit, RelativeSource={RelativeSource AncestorType=UserControl}, Converter={StaticResource BoolToVisibleOrCollapsed}}"/>
+            </Grid>
         </Grid>
     </Grid>
 </Base:BaseUserControl>
